Update dependencies, build, Docker image
Publish Docker image for GitHub actions, update dependencies